# app/Http/Controllers/ProductController.php
@@ -33,14 +33,16 @@ class ProductController extends ApiController
                     new OA\Property(property: 'limit', type: 'integer', default: 30, description: 'Количество продуктов для получения'),
                     new OA\Property(property: 'skip', type: 'integer', default: 0, description: 'Количество продуктов для пропуска'),
                     new OA\Property(property: 'category', type: 'string', description: 'Категория продуктов для фильтрации'),
-                    new OA\Property(property: 'search', type: 'string', description: 'Строка поиска для фильтрации продуктов'),
-                    new OA\Property(property: 'created_at', type: 'string', format: 'date-time', description: 'Дата и время создания'),
-                    new OA\Property(property: 'updated_at', type: 'string', format: 'date-time', description: 'Дата и время обновления')
+                    new OA\Property(property: 'search', type: 'string', description: 'Строка поиска для фильтрации продуктов')
                 ]
             )
         ),
         responses: [
-            new OA\Response(response: 200, description: 'Успешная синхронизация', content: new OA\JsonContent(type: 'array', items: new OA\Items(ref: '#/components/schemas/Product'))),
+            new OA\Response(
+                response: 200,
+                description: 'Успешная синхронизация',
+                content: new OA\JsonContent(type: 'array', items: new OA\Items(ref: '#/components/schemas/Product'))
+            ),
             new OA\Response(response: 400, description: 'Неверный запрос (некорректный JSON формат)'),
             new OA\Response(response: 403, description: 'Операция запрещена для данной сущности'),
             new OA\Response(response: 415, description: 'Неподдерживаемый тип данных (неверный заголовок Content-Type или Accept)'),
@@ -70,22 +72,16 @@ class ProductController extends ApiController
             )
         ),
         responses: [
-            new OA\Response(response: 201, description: 'Успешное добавление', content: new OA\JsonContent(
-                properties: [
-                    new OA\Property(property: 'id', type: 'integer', description: 'ID продукта'),
-                    new OA\Property(property: 'title', type: 'string', description: 'Название продукта'),
-                    new OA\Property(property: 'price', type: 'number', format: 'float', description: 'Цена продукта'),
-                    new OA\Property(property: 'category', type: 'string', description: 'Категория продукта'),
-                    new OA\Property(property: 'description', type: 'string', description: 'Описание продукта'),
-                    new OA\Property(property: 'created_at', type: 'string', format: 'date-time', description: 'Дата и время создания'),
-                    new OA\Property(property: 'updated_at', type: 'string', format: 'date-time', description: 'Дата и время обновления')
-                ]
-            )),
+            new OA\Response(
+                response: 201,
+                description: 'Успешное добавление',
+                content: new OA\JsonContent(ref: '#/components/schemas/Product')
+            ),
             new OA\Response(response: 400, description: 'Неверный запрос (некорректный JSON формат)'),
             new OA\Response(response: 403, description: 'Операция запрещена для данной сущности'),
             new OA\Response(response: 415, description: 'Неподдерживаемый тип данных (неверный заголовок Content-Type или Accept)'),
             new OA\Response(response: 422, description: 'Ошибка валидации входных данных'),
-            new OA\Response(response: 406, description: 'Неприемлемый формат данных (неверный заголовок Accept)'),
+            new OA\Response(response: 406, description: 'Неприемлемый формат данных (неверный заголовок Accept)')
         ]
     )]
     public function add(Request $request): JsonResponse
